# slack-talk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
slack_talk/: __init__.py  app.py  main.py
slack_talk/core/: config.py  models.py  queue.py  service.py  ws_server.py
slack_talk/slack/: client.py  preprocessor.py
slack_talk/stt/: audio.py  intent.py  voice_sender.py  wakeword.py  whisper.py
slack_talk/tts/: engine.py  voicevox.py  worker.py
tests/: test_app.py
tests/core/: test_config.py  test_models.py  test_queue.py  test_ws_server.py
tests/slack/: test_client.py  test_preprocessor.py
tests/stt/: test_audio.py  test_intent.py  test_voice_sender.py  test_wakeword.py  test_whisper.py
tests/tts/: test_engine.py  test_voicevox.py  test_worker.py
ui/: package-lock.json  package.json
ui/src/: App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src/components/: MessageArea.css  MessageArea.tsx  Settings.css  Settings.tsx  Sidebar.css  Sidebar.tsx  ThreadPanel.css  ThreadPanel.tsx
ui/src/hooks/: useWebSocket.ts
ui/src/store/: appStore.ts
ui/src/styles/: global.css  themes.css
